--- a/Visual Studio/Framework_EGC.vcxproj.filters
+++ b/Visual Studio/Framework_EGC.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClCompile Include="..\Source\Brick Breaker\Scene\Brick.cpp">
       <Filter>Brick Breaker\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\Brick Breaker\Scene\Wall.cpp">
+      <Filter>Brick Breaker\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Core\World.h">
@@ -143,6 +146,9 @@
     </ClInclude>
     <ClInclude Include="..\Source\Brick Breaker\Animations\Transform2D.h">
       <Filter>Brick Breaker\Animations</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\Brick Breaker\Scene\Wall.h">
+      <Filter>Brick Breaker\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
