--- a/Visual Studio/Framework_EGC.vcxproj
+++ b/Visual Studio/Framework_EGC.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="..\Source\Brick Breaker\Scene\Brick.cpp" />
     <ClCompile Include="..\Source\Brick Breaker\Scene\Scene.cpp" />
+    <ClCompile Include="..\Source\Brick Breaker\Scene\Wall.cpp" />
     <ClCompile Include="..\Source\Component\CameraInput.cpp" />
     <ClCompile Include="..\Source\Component\SceneInput.cpp" />
     <ClCompile Include="..\Source\Component\SimpleScene.cpp" />
@@ -41,6 +42,7 @@
     <ClInclude Include="..\Source\Brick Breaker\Animations\Transform2D.h" />
     <ClInclude Include="..\Source\Brick Breaker\Scene\Brick.h" />
     <ClInclude Include="..\Source\Brick Breaker\Scene\Scene.h" />
+    <ClInclude Include="..\Source\Brick Breaker\Scene\Wall.h" />
     <ClInclude Include="..\Source\Component\CameraInput.h" />
     <ClInclude Include="..\Source\Component\SceneInput.h" />
     <ClInclude Include="..\Source\Component\SimpleScene.h" />
