move platform and ball on mouse move; launch ball on mouse button press

--- a/Visual Studio/Framework_EGC.vcxproj
+++ b/Visual Studio/Framework_EGC.vcxproj
@@ -43,6 +43,7 @@
     <ClCompile Include="..\Source\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Source\Brick Breaker\Generic\AnimatedMesh.h" />
     <ClInclude Include="..\Source\Brick Breaker\Generic\Circle.h" />
     <ClInclude Include="..\Source\Brick Breaker\Generic\Rectangle.h" />
     <ClInclude Include="..\Source\Brick Breaker\Generic\Transform2D.h" />
