--- a/Visual Studio/Framework_EGC.vcxproj.filters
+++ b/Visual Studio/Framework_EGC.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="..\Source\Brick Breaker\Generic\Rectangle.h">
       <Filter>Brick Breaker\Generic</Filter>
     </ClInclude>
+    <ClInclude Include="..\Source\Brick Breaker\Generic\AnimatedMesh.h">
+      <Filter>Brick Breaker\Generic</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
