--- a/Visual Studio/Framework_EGC.vcxproj.filters
+++ b/Visual Studio/Framework_EGC.vcxproj.filters
@@ -19,14 +19,14 @@
     <Filter Include="Core\Managers">
       <UniqueIdentifier>{2940a1fd-9fef-46a7-93fb-a8241118d00a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Brick Breaker">
-      <UniqueIdentifier>{ee5eb85a-5053-4f96-8ae7-02f779cfb491}</UniqueIdentifier>
+    <Filter Include="brickbreaker">
+      <UniqueIdentifier>{112fcb3d-1953-4801-8ec3-7a2bafd41279}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Brick Breaker\Scene">
-      <UniqueIdentifier>{1a33abde-d70a-4802-9d64-5f148c637804}</UniqueIdentifier>
+    <Filter Include="brickbreaker\generic">
+      <UniqueIdentifier>{7976e9b4-6a90-4131-b47c-32587b6f7655}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Brick Breaker\Generic">
-      <UniqueIdentifier>{90d7a238-a727-4e0b-a43d-86c62362c9b1}</UniqueIdentifier>
+    <Filter Include="brickbreaker\scene">
+      <UniqueIdentifier>{e748ebee-72db-4c0f-8664-5f0cd0d6680d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -45,7 +45,6 @@
     <ClCompile Include="..\Source\Core\GPU\Shader.cpp">
       <Filter>Core\GPU</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Main.cpp" />
     <ClCompile Include="..\Source\Core\Window\WindowCallbacks.cpp">
       <Filter>Core\Window</Filter>
     </ClCompile>
@@ -73,27 +72,28 @@
     <ClCompile Include="..\Source\Component\SceneInput.cpp">
       <Filter>Component</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Brick Breaker\Scene\Scene.cpp">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClCompile Include="..\Source\brickbreaker\generic\circle.cc">
+      <Filter>brickbreaker\generic</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Brick Breaker\Scene\Brick.cpp">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClCompile Include="..\Source\brickbreaker\generic\rectangle.cc">
+      <Filter>brickbreaker\generic</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Brick Breaker\Scene\Wall.cpp">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClCompile Include="..\Source\brickbreaker\scene\ball.cc">
+      <Filter>brickbreaker\scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Brick Breaker\Scene\Platform.cpp">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClCompile Include="..\Source\brickbreaker\scene\brick.cc">
+      <Filter>brickbreaker\scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Brick Breaker\Scene\Ball.cpp">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClCompile Include="..\Source\brickbreaker\scene\platform.cc">
+      <Filter>brickbreaker\scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Brick Breaker\Generic\Circle.cpp">
-      <Filter>Brick Breaker\Generic</Filter>
+    <ClCompile Include="..\Source\brickbreaker\scene\scene.cc">
+      <Filter>brickbreaker\scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\Brick Breaker\Generic\Rectangle.cpp">
-      <Filter>Brick Breaker\Generic</Filter>
+    <ClCompile Include="..\Source\brickbreaker\scene\wall.cc">
+      <Filter>brickbreaker\scene</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\main.cc" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Core\World.h">
@@ -150,32 +150,32 @@
     <ClInclude Include="..\Source\Component\SceneInput.h">
       <Filter>Component</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Brick Breaker\Scene\Scene.h">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClInclude Include="..\Source\brickbreaker\generic\animatedmesh.h">
+      <Filter>brickbreaker\generic</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Brick Breaker\Scene\Brick.h">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClInclude Include="..\Source\brickbreaker\generic\circle.h">
+      <Filter>brickbreaker\generic</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Brick Breaker\Scene\Wall.h">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClInclude Include="..\Source\brickbreaker\generic\rectangle.h">
+      <Filter>brickbreaker\generic</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Brick Breaker\Scene\Platform.h">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClInclude Include="..\Source\brickbreaker\generic\transform2d.h">
+      <Filter>brickbreaker\generic</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Brick Breaker\Scene\Ball.h">
-      <Filter>Brick Breaker\Scene</Filter>
+    <ClInclude Include="..\Source\brickbreaker\scene\ball.h">
+      <Filter>brickbreaker\scene</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Brick Breaker\Generic\Transform2D.h">
-      <Filter>Brick Breaker\Generic</Filter>
+    <ClInclude Include="..\Source\brickbreaker\scene\brick.h">
+      <Filter>brickbreaker\scene</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Brick Breaker\Generic\Circle.h">
-      <Filter>Brick Breaker\Generic</Filter>
+    <ClInclude Include="..\Source\brickbreaker\scene\platform.h">
+      <Filter>brickbreaker\scene</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Brick Breaker\Generic\Rectangle.h">
-      <Filter>Brick Breaker\Generic</Filter>
+    <ClInclude Include="..\Source\brickbreaker\scene\scene.h">
+      <Filter>brickbreaker\scene</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Brick Breaker\Generic\AnimatedMesh.h">
-      <Filter>Brick Breaker\Generic</Filter>
+    <ClInclude Include="..\Source\brickbreaker\scene\wall.h">
+      <Filter>brickbreaker\scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
