20% chance to spawn powerup after destroying a brick

--- a/Visual Studio/Framework_EGC.vcxproj.filters
+++ b/Visual Studio/Framework_EGC.vcxproj.filters
@@ -97,6 +97,9 @@
     <ClCompile Include="..\Source\brickbreaker\scene\pausebutton.cpp">
       <Filter>brickbreaker\scene</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\brickbreaker\scene\powerup.cpp">
+      <Filter>brickbreaker\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Core\World.h">
@@ -181,6 +184,9 @@
       <Filter>brickbreaker\scene</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\brickbreaker\scene\pausebutton.h">
+      <Filter>brickbreaker\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\brickbreaker\scene\powerup.h">
       <Filter>brickbreaker\scene</Filter>
     </ClInclude>
   </ItemGroup>
