--- a/Visual Studio/Framework_EGC.vcxproj
+++ b/Visual Studio/Framework_EGC.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="..\Source\brickbreaker\scene\brick.cc" />
     <ClCompile Include="..\Source\brickbreaker\scene\pausebutton.cpp" />
     <ClCompile Include="..\Source\brickbreaker\scene\platform.cc" />
+    <ClCompile Include="..\Source\brickbreaker\scene\powerup.cpp" />
     <ClCompile Include="..\Source\brickbreaker\scene\scene.cc" />
     <ClCompile Include="..\Source\brickbreaker\scene\wall.cc" />
     <ClCompile Include="..\Source\Component\CameraInput.cpp" />
@@ -52,6 +53,7 @@
     <ClInclude Include="..\Source\brickbreaker\scene\brick.h" />
     <ClInclude Include="..\Source\brickbreaker\scene\pausebutton.h" />
     <ClInclude Include="..\Source\brickbreaker\scene\platform.h" />
+    <ClInclude Include="..\Source\brickbreaker\scene\powerup.h" />
     <ClInclude Include="..\Source\brickbreaker\scene\scene.h" />
     <ClInclude Include="..\Source\brickbreaker\scene\wall.h" />
     <ClInclude Include="..\Source\Component\CameraInput.h" />
