--- a/Visual Studio/Framework_EGC.vcxproj
+++ b/Visual Studio/Framework_EGC.vcxproj
@@ -21,13 +21,13 @@
   <ItemGroup>
     <ClCompile Include="..\Source\brickbreaker\generic\circle.cc" />
     <ClCompile Include="..\Source\brickbreaker\generic\rectangle.cc" />
-    <ClCompile Include="..\Source\brickbreaker\scene\ball.cc" />
-    <ClCompile Include="..\Source\brickbreaker\scene\brick.cc" />
-    <ClCompile Include="..\Source\brickbreaker\scene\pausebutton.cpp" />
-    <ClCompile Include="..\Source\brickbreaker\scene\platform.cc" />
-    <ClCompile Include="..\Source\brickbreaker\scene\powerup.cpp" />
+    <ClCompile Include="..\Source\brickbreaker\scene\game\ball.cc" />
+    <ClCompile Include="..\Source\brickbreaker\scene\game\brick.cc" />
+    <ClCompile Include="..\Source\brickbreaker\scene\game\platform.cc" />
+    <ClCompile Include="..\Source\brickbreaker\scene\game\powerup.cpp" />
+    <ClCompile Include="..\Source\brickbreaker\scene\game\wall.cc" />
     <ClCompile Include="..\Source\brickbreaker\scene\scene.cc" />
-    <ClCompile Include="..\Source\brickbreaker\scene\wall.cc" />
+    <ClCompile Include="..\Source\brickbreaker\scene\ui\pausebutton.cpp" />
     <ClCompile Include="..\Source\Component\CameraInput.cpp" />
     <ClCompile Include="..\Source\Component\SceneInput.cpp" />
     <ClCompile Include="..\Source\Component\SimpleScene.cpp" />
@@ -49,13 +49,13 @@
     <ClInclude Include="..\Source\brickbreaker\generic\circle.h" />
     <ClInclude Include="..\Source\brickbreaker\generic\rectangle.h" />
     <ClInclude Include="..\Source\brickbreaker\generic\transform2d.h" />
-    <ClInclude Include="..\Source\brickbreaker\scene\ball.h" />
-    <ClInclude Include="..\Source\brickbreaker\scene\brick.h" />
-    <ClInclude Include="..\Source\brickbreaker\scene\pausebutton.h" />
-    <ClInclude Include="..\Source\brickbreaker\scene\platform.h" />
-    <ClInclude Include="..\Source\brickbreaker\scene\powerup.h" />
+    <ClInclude Include="..\Source\brickbreaker\scene\game\ball.h" />
+    <ClInclude Include="..\Source\brickbreaker\scene\game\brick.h" />
+    <ClInclude Include="..\Source\brickbreaker\scene\game\platform.h" />
+    <ClInclude Include="..\Source\brickbreaker\scene\game\powerup.h" />
+    <ClInclude Include="..\Source\brickbreaker\scene\game\wall.h" />
     <ClInclude Include="..\Source\brickbreaker\scene\scene.h" />
-    <ClInclude Include="..\Source\brickbreaker\scene\wall.h" />
+    <ClInclude Include="..\Source\brickbreaker\scene\ui\pausebutton.h" />
     <ClInclude Include="..\Source\Component\CameraInput.h" />
     <ClInclude Include="..\Source\Component\SceneInput.h" />
     <ClInclude Include="..\Source\Component\SimpleScene.h" />
