--- a/Visual Studio/Framework_EGC.vcxproj.filters
+++ b/Visual Studio/Framework_EGC.vcxproj.filters
@@ -106,6 +106,12 @@
     <ClCompile Include="..\Source\brickbreaker\scene\ui\pausebutton.cpp">
       <Filter>brickbreaker\scene\ui</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\brickbreaker\generic\heart.cc">
+      <Filter>brickbreaker\generic</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\brickbreaker\scene\ui\life.cc">
+      <Filter>brickbreaker\scene\ui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Core\World.h">
@@ -193,6 +199,12 @@
       <Filter>brickbreaker\scene\game</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\brickbreaker\scene\ui\pausebutton.h">
+      <Filter>brickbreaker\scene\ui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\brickbreaker\generic\heart.h">
+      <Filter>brickbreaker\generic</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\brickbreaker\scene\ui\life.h">
       <Filter>brickbreaker\scene\ui</Filter>
     </ClInclude>
   </ItemGroup>
